force-app/main/default/objects/todo_item__c/todo_item__c.object-meta.xml
<CustomObject>
    <label>todo item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>todo items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>