force-app/main/default/objects/todo_item__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>low</fullName>
            </value>
            <value>
                <fullName>medium</fullName>
            </value>
            <value>
                <fullName>high</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>