force-app/main/default/objects/todo_item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>draft</fullName>
                <default>true</default>
                <label>draft</label>
            </value>
            <value>
                <fullName>in progress</fullName>
            </value>
            <value>
                <fullName>done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>